--- a/src/components/form-styles.scss
+++ b/src/components/form-styles.scss
@@ -29,16 +29,16 @@
   clip-path: none;
 }
 
-.required::after {
-  content: '*';
-  color: #b30009;
-  margin-left: 5px;
-  margin-left: 2px;
-  margin-top: -2px;
-  margin-right: 5px;
+// .required::after {
+//   content: '*';
+//   color: #b30009;
+//   margin-left: 5px;
+//   margin-left: 2px;
+//   margin-top: -2px;
+//   margin-right: 5px;
 
 
-}
+// }
 
 .required {
     color: #b30009;
