--- a/src/components/input-group/input-group-styles.scss
+++ b/src/components/input-group/input-group-styles.scss
@@ -92,8 +92,8 @@
   margin-left: 4px !important;
 
   &:focus-visible {
-    border-color: #b80000;
-    box-shadow: 0 0 0 0.2rem rgba(184, 0, 0, 0.25);
+    // border-color: #b80000;
+    // box-shadow: 0 0 0 0.2rem rgba(184, 0, 0, 0.25);
     outline: none;
 
     svg {
