--- a/src/global/global.scss
+++ b/src/global/global.scss
@@ -18,6 +18,8 @@ $fa-font-path: '/assets/fonts'; // ✅ must be before imports!
 
 @import '../components/popover/popover-component-styles.scss';
 
+@import '../components/progress-display/progress-display-styles.scss';
+
 // :root {
 //   --amber: #ffc107;
 //   --blue: #2196f3;
